# shiplog

./: .env.example  .gitignore  README.md  pyproject.toml
example/: diun.yml  images.yml
src/shiplog/: __init__.py  analyzer.py  changelog.py  cli.py  db.py  diun.py  ntfy.py
tests/: conftest.py  test_analyzer.py  test_changelog.py  test_cli.py  test_db.py  test_diun.py  test_e2e.py  test_ntfy.py  test_pipeline.py
